# bydefault

./: .cursorrules  .gitignore  .ruff.toml  PRD.md  README-sortPRD.md  README.md  README_scan.md  TODO.md  byDefault-0.5.1.spec  byDefault-0.5.2.spec  byDefault-0.5.3.spec  byDefault-0.5.4.spec  byDefault-0.5.5.spec  byDefault.spec  bydefault-PRD.md  pyproject.toml  pytest.ini  requirements.txt
.github/disabled_workflows/: ci.yml
.github/workflows/: ci.yml
docs/: sort_command_examples.md
phases/: P1.md  P2.md  P3.md  P4.md  P5.md
scripts/: create_test_tas.sh
src/bydefault/: __init__.py  cli.py
src/bydefault/cli/: README.md  __init__.py  merge.py  version.py
src/bydefault/commands/: README_merge.md  README_scan.md  README_sort.md  README_validate.md  __init__.py  merge.py  scan.py  sort.py  validator.py
src/bydefault/core/: README.md  __init__.py  splunk_ops.py  version_manager.py
src/bydefault/core/merge/: README.md  __init__.py  conf.py  conf_structures.py  parser.py
src/bydefault/core/version/: update.py
src/bydefault/models/: __init__.py  change_detection.py  merge_models.py  sort_models.py  splunk_config.py  validation_results.py
src/bydefault/utils/: README.md  __init__.py  backup.py  change_detection.py  file.py  logger.py  merge_utils.py  output.py  parser.py  scanner.py  sort_utils.py  writer.py
test_tas/: README.md
tests/: __init__.py  conftest.py  test_change_detection.py  test_cli.py  test_cli_validate.py  test_splunk_ops.py  test_version_manager.py
tests/cli/: test_cli.py
tests/core/merge/: __init__.py  test_conf.py  test_conf_structures.py  test_parser.py
tests/core/version/: test_update.py
tests/fixtures/merge/: complex_multiline.conf  splunk_transforms.conf
tests/fixtures/sort/: all_stanza_types.conf  multiline_values.conf  multiple_global_stanzas.conf  perfmon_test.conf  simple_multiline.conf  single_global_stanza.conf  wildcard_prefix_test.conf  wildcard_prefix_variations.conf
tests/fixtures/test_ta/default/: server.conf
tests/fixtures/test_ta/local/: server.conf
tests/test_commands/: __init__.py  test_change_detection.py  test_commands.py  test_merge.py  test_scan.py  test_scanner.py  test_sort.py  test_validator.py
tests/test_models/: __init__.py  test_change_detection.py  test_splunk_config.py  test_validation_results.py
tests/test_utils/: __init__.py  test_merge_default_only_stanzas.py  test_merge_multiline.py  test_merge_utils.py  test_output.py  test_sort_multiline.py  test_sort_utils.py
tests/utils/: test_file.py  test_logger.py
todos/: P2_validator_verbose.md
