[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bydefault"
version = "0.1.0"
description = "CLI tools for Splunk 9.2.2 TA development and maintenance"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Your Organization" }]
dependencies = [
    "click>=8.1.0", # CLI framework
    "rich>=13.9.4",
]

[dependency-groups]
dev = [
    "ruff>=0.7.3",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
bydefault = "bydefault.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=bydefault --cov-report=term --cov-report=term-missing --cov-report=html --cov-report=xml"

[tool.coverage.run]
branch = true
source = ["bydefault"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 80

[tool.hatch.build.targets.wheel]
packages = ["src/bydefault"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
]
