[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bydefault"
version = "0.3.0"
description = "CLI tools for Splunk TA development and maintenance"
requires-python = ">=3.11"
dependencies = ["click>=8.1.0", "rich-click>=1.8.3", "rich>=13.9.4"]

[dependency-groups]
dev = [
    "ruff>=0.7.3",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
bydefault = "bydefault.cli:cli"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "D", # pydocstyle
]
